tests/network-setups/test/fabric/k8s/fabric-cli.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fabric-cli
spec:
  replicas: 1
  selector:
    matchLabels:
      name: fabric-cli
  template:
    metadata:
      labels:
        name: fabric-cli
        app: fabric-cli
    spec:
      volumes:
        - name: network1-secrets
          persistentVolumeClaim:
            claimName: network1-secrets
      containers:
        - name: fabric-cli
          image: hyperledger/fabric-tools:2.2
          command: ["sh", "-c", "sleep 3600"]
          env:
            - name: FABRIC_CFG_PATH
              value: /var/pvc1
          volumeMounts:
            - name: network1-secrets
              mountPath: /var/pvc1
