tests/network-setups/test/fabric/k8s/secret-artifactory-apikey.yaml
apiVersion: v1
kind: Secret
metadata:
  name: artifactory-apikey
  annotations:
    app.kubernetes.io/component: "ARTIFACTORY APIKEY"
  labels:
    app: artifactory-apikey
type: Opaque
data:
  apikey: QUtDcDVlM3AySjFIakxuUkpLdUFiZjg0ZW96TUJCQVc0Q3JUdmo2cnU3M29pUlNnUkcyb3NTblIyemE2bWM1NG1HbkZ3TlR6cA==
